@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  20 Jan 2010; James Rowe <jnrowe@gmail.com> -rails-4.0.ebuild,
+  rails-4.1.ebuild:
+  Keyworded x86.
+
   20 Jan 2010; James Rowe <jnrowe@gmail.com> rails-4.1.ebuild:
   Keyworded amd64.
 
